# docker_skeleton

backend/: main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/app/: page.js
