[tool.poetry]
name = "docker-backend"
version = "0.1.0"
description = ""
authors = ["jordan"]
readme = "README.md"
packages = [{include = "docker_backend"}]

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.103.2"
requests = "^2.31.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
